# cgal

./: .gitignore  Main.hs  README.md  cgal.cabal  stack.yaml  ztemp.hs
Data/: regularTetrahedron.hs  sphere.txt  sphere2.hs  sphere3.hs
bin-package-db/: LICENSE  bin-package-db.cabal  stack.yaml
bin-package-db/Distribution/InstalledPackageInfo/: Binary.hs
cpp/: cgal.cpp  cgal.hpp  cgal2.cpp  cgal3.cpp  cgal4.cpp  intersection.cpp  intersection.hpp  intersection0.cpp  intersection00.cpp  utils.cpp  utils.hpp
hsc/: Mesh.hs  Mesh.hsc  cgal.hpp  intersection.hpp
src/: ConvexParts.hs  Examples.hs  Helpers.hs  Lib.hs  Mesh.hs  PolyhedraIntersection.hs  PolyhedraIntersection0.hs  PolyhedraUnion.hs  PolyhedraUnion0.hs  Polyhedron2OFF.hs  Types.hs
src-exe/: MainConvexParts.hs  MainIntersection.hs  MainUnion.hs  MainUnion2.hs  MainUnion3.hs
src/ReuleuxIntersection/: regularTetrahedron.hs  reuleuxTetrahedron.hs  sphere1.hs  sphere2.hs
src/Truncated120Cell/: Data.hs
