name:                cgal
version:             0.1.0.0
homepage:            https://github.com/stla/cgal#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
--                     , Polyhedron2OFF
                     , PolyhedraIntersection
                     , Types
                     , Mesh
                     , Helpers
                     , ConvexParts
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , permutation
  include-dirs:        cpp
  C-sources:           cpp/cgal.cpp
                     , cpp/utils.cpp
  extra-libraries:     stdc++
                     , CGAL
                     , CGAL_Core
                     , mpfr
                     , gmp
  ghc-options:         -Wall -pgml g++
  other-extensions:    CPP
                     , ForeignFunctionInterface
  cc-options:          -fPIC
  default-language:    Haskell2010

executable testintersection
  hs-source-dirs:      src-exe
  main-is:             MainIntersection.hs
  ghc-options:         -O2 -optc-fpermissive -optc-fexceptions -Wall
  build-depends:       base >= 4.7 && < 5
                     , cgal
                     , pretty-show
                     , containers
  default-language:    Haskell2010

executable testconvexparts
  hs-source-dirs:      src-exe
  main-is:             MainConvexParts.hs
  ghc-options:         -fllvm
  build-depends:       base >= 4.7 && < 5
                     , cgal
                     , pretty-show
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/cgal
