name:                cgal
version:             0.1.0.0
homepage:            https://github.com/stla/cgal#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description:
    Build the executables.
  default: False
flag exe-intersection
  default: False
flag exe-union
  default: False
flag exe-convexparts
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Polyhedron2OFF
                     , PolyhedraIntersection
                     , PolyhedraUnion
                     , Types
                     , Mesh
                     , Helpers
                     , ConvexParts
                     , Examples
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , permutation
                     , safe
                     , linear
  include-dirs:        cpp
  C-sources:           cpp/cgal4.cpp
                     , cpp/utils.cpp
  extra-libraries:     stdc++
                     , CGAL
                     , CGAL_Core
                     , mpfr
                     , gmp
  ghc-options:         -Wall -pgml g++
  other-extensions:    CPP
                     , ForeignFunctionInterface
--  cc-options:          -fPIC
  default-language:    Haskell2010

executable testintersection
  if flag(exe) || flag(exe-intersection)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      src-exe
  main-is:             MainIntersection.hs
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , cgal
                     , pretty-show
                     , containers
  default-language:    Haskell2010

executable testunion
  if flag(exe) || flag(exe-union)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      src-exe
  main-is:             MainUnion3.hs
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , cgal
                     , pretty-show
                     , containers
  default-language:    Haskell2010

executable testconvexparts
  if flag(exe) || flag(exe-convexparts)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      src-exe
  main-is:             MainConvexParts.hs
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , cgal
                     , pretty-show
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/cgal
