name:                bin-package-db
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/bin-package-db#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Library
build-type:          Simple
cabal-version:       >1.6
extra-source-files:  README.md

source-repository head
    type:     darcs
    location: http://darcs.haskell.org/ghc

flag base3
    default: False

Library {
    exposed-modules:
            Distribution.InstalledPackageInfo.Binary

    if flag(base3)
        build-depends: base >= 3 && < 4
        cpp-options: -DBASE3
    else
        build-depends: base >= 4 && < 5

    build-depends: binary == 0.5.*
                 , Cabal >= 1.8 && < 1.16

    extensions: CPP
}
-- library
--   hs-source-dirs:      Distribution/InstalledPackageInfo
--   exposed-modules:     Binary
--   default-language:    Haskell2010
--   build-depends:       base
--                      , binary == 0.5*
--   extensions:          CPP
